# mcp-server

./: .dockerignore  .env_dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TASK.md  a2a_ge_register.sh  ae_cloud_test.py  ae_deploy.py  ae_get_agent_card.py  agui_server.py  as_delete_agent.sh  as_register.sh  er_431059.json  fp_deploy.py  ge_a2a_register.sh  ge_delete_agent.sh  ge_get_agent_card.py  ge_register.sh  ge_stream_assist_sharepoint.py  ignore_this_file.md  pyproject.toml
a2a_app/: __init__.py  deploy.py  server.py  test_client_agent.py  test_remote.py
adk_agent/: .env_example  __init__.py  agent.py  tools.py
adk_agent_registry/: .env_example  __init__.py  agent.py  agent_registry_tool.py
er_query/: __init__.py  client.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
mcp_server/: __init__.py  __main__.py  server.py
skills/er-query/: SKILL.md
temp/: long_running_task_approach.md  skill-publishing-guide.md
tests/: __init__.py  test_a2a_unit.py  test_adk_agent.py  test_agui_server.py  test_cloud_mcp.py  test_er_query.py  test_integration.py  test_long_running_tool.py  test_mcp_http.py  test_mcp_server.py  test_mcp_sse.py
wy-tutorial/: approach.md
